# liblksu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/: command.h  export.h  lksu.h
include/lksu/: liblksu.h
src/: build.cmake  commands.c  lksu.c
